--- a/Controller/autocar_cntr_rx220/autocar_cntr_rx220_03a/.vscode/tasks.json
+++ b/Controller/autocar_cntr_rx220/autocar_cntr_rx220_03a/.vscode/tasks.json
@@ -4,14 +4,12 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Build", // ビルドタスク
+            "label": "Build",
             "type": "shell",
             "command": "C:\\Program Files (x86)\\Renesas Electronics\\CS+\\CC\\CubeSuite+.exe",
-            "args": [   // 引数指定
-                "/bb",   // ビルドを実行
-                "${workspaceRoot}\\${workspaceRootFolderName}.mtpj",    // プロジェクトファイル(.mtpj)をディレクトリから指定する
-                // "${workspaceRoot}\\autocar_cntr_rx220_03a.mtpj",    // プロジェクトファイル(.mtpj)をディレクトリから指定する
-                
+            "args": [
+                "/bb",
+                "${workspaceRoot}\\${workspaceRootFolderName}.mtpj"
             ],
             "group": {
                 "kind": "build",
@@ -19,20 +17,21 @@
             }
         },
         {
-            "label": "Flash_RX220_A", // マイコンへの書き込み
+            "label": "Flash_RX220_A",
             "type": "shell",
             "command": "C:\\Program Files (x86)\\Renesas Electronics\\Programming Tools\\Renesas Flash Programmer V3.06\\RFPV3.Console.exe",
-            "args": [   // 引数を指定
-            "D:\\Product\\Renesas\\RX220_flash_rpj\\RX220_A\\RX220_A.rpj",    // プロジェクトファイル(.rpj)をディレクトリから指定する
+            "args": [
+                "D:\\Product\\Renesas\\RX220_flash_rpj\\RX220_A\\RX220_A.rpj"
             ],
+            "problemMatcher": []
         },
         {
-            "label": "Flash_RX220_D", // マイコンへの書き込み
+            "label": "Flash_RX220_D",
             "type": "shell",
             "command": "C:\\Program Files (x86)\\Renesas Electronics\\Programming Tools\\Renesas Flash Programmer V3.06\\RFPV3.Console.exe",
-            "args": [   // 引数を指定
-            "D:\\Product\\Renesas\\RX220_flash_rpj\\RX220_D\\RX220_D.rpj",    // プロジェクトファイル(.rpj)をディレクトリから指定する
-            ],
+            "args": [
+                "D:\\Product\\Renesas\\RX220_flash_rpj\\RX220_D\\RX220_D.rpj"
+            ]
         }
- ]
+    ]
 }
